[gd_scene load_steps=2 format=3 uid="uid://cteq0wga6usqa"]

[ext_resource type="Script" path="res://addons/scripts/pause.gd" id="1_4hhgn"]

[node name="Pause" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_4hhgn")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG Color" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.494118)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -20.0
offset_right = 31.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Pause Label" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "PAUSED"
horizontal_alignment = 1

[node name="Unpause" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Unpause"

[node name="Restart" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Exit" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="button_down" from="Control/VBoxContainer/Unpause" to="." method="_on_unpause_button_down"]
[connection signal="pressed" from="Control/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
